[gd_scene load_steps=2 format=3 uid="uid://cxhyslse1we52"]

[ext_resource type="Script" uid="uid://d1sspbukuvfid" path="res://Scripts/game.gd" id="1_cby6k"]

[node name="TestLoadLevel" type="Node2D" node_paths=PackedStringArray("current", "target")]
script = ExtResource("1_cby6k")
current = NodePath("CurrentImage")
target = NodePath("TargetImage")

[node name="CurrentImage" type="Sprite2D" parent="."]
position = Vector2(308.35126, 229.65187)
scale = Vector2(0.5133781, 0.45448482)

[node name="TargetImage" type="Sprite2D" parent="."]
position = Vector2(766.5, 229.25)
scale = Vector2(0.5512501, 0.4560547)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1155.0
offset_bottom = 646.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 62.0
offset_top = 546.0
offset_right = 1083.0
offset_bottom = 598.0

[node name="Flou" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Flou"

[node name="Erosion" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Erosion"

[node name="Dilatation" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Dilatation"

[node name="Seuil otsu" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Seuil otsu"

[node name="Difference" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Difference"

[node name="Negatif" type="Button" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Negatif"

[connection signal="button_down" from="Control/HBoxContainer/Flou" to="." method="_on_flou_button_down"]
[connection signal="button_down" from="Control/HBoxContainer/Erosion" to="." method="_on_erosion_button_down"]
[connection signal="button_down" from="Control/HBoxContainer/Dilatation" to="." method="_on_dilatation_button_down"]
[connection signal="button_down" from="Control/HBoxContainer/Seuil otsu" to="." method="_on_seuil_otsu_button_down"]
[connection signal="button_down" from="Control/HBoxContainer/Difference" to="." method="_on_difference_button_down"]
[connection signal="button_down" from="Control/HBoxContainer/Negatif" to="." method="_on_negatif_button_down"]
